<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".ui.fragment.subjects.subjecthome.SortSubjectFragment">


    <TextView
        android:id="@+id/studentName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/product_sans_regular"
        android:text="Sort Subjects"
        android:textColor="@color/light_blue_600"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtBranch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/product_sans_regular"
        android:text="Branch"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/studentName"
        app:layout_constraintTop_toBottomOf="@+id/studentName" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_marginEnd="16dp"
        android:src="@drawable/ic_sort"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/studentName" />


    <HorizontalScrollView
        android:id="@+id/addBranchScrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:scrollbars="none"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtBranch">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/chipGroupAddBranch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:checkedChip="@id/chipCSE"
                app:selectionRequired="true"
                app:singleLine="true"
                app:singleSelection="true">

                <com.google.android.material.chip.Chip
                    android:id="@+id/chipCSE"
                    style="@style/CustomChipStyleSubjects"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cse" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chipMechanical"
                    style="@style/CustomChipStyleSubjects"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mechanical" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chipCivil"
                    style="@style/CustomChipStyleSubjects"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/civil" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chipElectronics"
                    style="@style/CustomChipStyleSubjects"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/electronics" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chipElectrical"
                    style="@style/CustomChipStyleSubjects"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/electrical" />


            </com.google.android.material.chip.ChipGroup>

        </LinearLayout>
    </HorizontalScrollView>


    <TextView
        android:id="@+id/textAddSemester"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="Semester"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addBranchScrollView" />

    <HorizontalScrollView
        android:id="@+id/addSemScrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:scrollbars="none"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textAddSemester">

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/chipGroupAddSemester"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:checkedChip="@id/chip_add_sem_1"
            app:selectionRequired="true"
            app:singleLine="true"
            app:singleSelection="true">

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_add_sem_1"
                style="@style/CustomChipStyleSubjects"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_1" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_add_sem_2"
                style="@style/CustomChipStyleSubjects"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_2" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_add_sem_3"
                style="@style/CustomChipStyleSubjects"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_3" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_add_sem_4"
                style="@style/CustomChipStyleSubjects"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_4" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_add_sem_5"
                style="@style/CustomChipStyleSubjects"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_5" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_add_sem_6"
                style="@style/CustomChipStyleSubjects"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_6" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_add_sem_7"
                style="@style/CustomChipStyleSubjects"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_7" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_add_sem_8"
                style="@style/CustomChipStyleSubjects"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_8" />

        </com.google.android.material.chip.ChipGroup>

    </HorizontalScrollView>

    <Button
        android:id="@+id/btnUpdate"
        style="@style/Widget.MaterialComponents.FloatingActionButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="32dp"
        android:backgroundTint="@color/light_blue_600"
        android:padding="12dp"
        android:text="Update"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/addSemScrollView"
        app:layout_constraintStart_toStartOf="@+id/addSemScrollView"
        app:layout_constraintTop_toBottomOf="@+id/addSemScrollView" />

</androidx.constraintlayout.widget.ConstraintLayout>